<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ThemeFragment"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/selectYourTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectTheme"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHaunted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:id="@+id/linearHaunted"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageHaunted"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/casa"
            android:layout_gravity="left"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/textviewHaunted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hauntedHouse"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:gravity="center"
            android:textAlignment="center"

            android:textColor="@color/orange"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardCursed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:id="@+id/linearCursed"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageCursed"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/bosque"
                android:layout_gravity="left"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/textCursed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cursedWood"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:gravity="center"
                android:textAlignment="center"

                android:textColor="@color/orange"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>

